[FIX] spacing and image

--- a/bhotekoshisukute/src/index.css
+++ b/bhotekoshisukute/src/index.css
@@ -44,3 +44,19 @@
         opacity: 1;
         z-index: 2;
     }
+
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: white;              /* or your theme color */
+  width: 40px;
+  height: 40px;
+}
+
+@media (max-width: 768px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    width: 28px;
+    height: 28px;
+  }
+}
